--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<router-outlet></router-outlet>
+<main class="container mx-auto px-20 mt-20 mb-40">
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
 
