--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 
-
-<div id="default-carousel" class="relative w-full" data-carousel="slide">
+<section class="container"> 
+<div id="default-carousel" class="relative w-full " data-carousel="slide">
     <!-- Carousel wrapper -->
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
          <!-- Item 1 -->
@@ -34,15 +34,15 @@
     </div>
     <!-- Slider controls -->
     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-            <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
+            <svg class="w-4 h-4 text-white rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
             </svg>
             <span class="sr-only">Previous</span>
         </span>
     </button>
     <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+        <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30  group-hover:bg-white/50  group-focus:ring-4 group-focus:ring-white  group-focus:outline-none">
             <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
             </svg>
@@ -50,5 +50,28 @@
         </span>
     </button>
 </div>
+</section>
 
-<a [routerLink]="['/products']"></a>
+<section class="mt-40">
+    <h2 class="text-center uppercase text-3xl font-bold">Descubre que le gusta a la gente </h2>
+        <app-products [mostViewed]="true"></app-products>
+</section>
+
+<section class="mt-20">
+    <h2 class="text-center uppercase text-3xl font-bold">Una amplia variedad de productos</h2>
+    <ul class="flex flex-wrap items-center justify-center text-gray-900 pt-10 pb-10  uppercase font-semibold text-lg">
+        <li>
+            <a href="#" class="me-4 hover:border-b-2 hover:border-blue-600 md:me-6 active:border-b-2 active:border-blue-600" filterCat="CAT 1">Categoría 1</a>
+        </li>
+        <li>
+            <a href="#" class="me-4 hover:border-b-2 hover:border-blue-600 md:me-6 active:border-b-2 active:border-blue-600" filterCat="CAT 2">Categoría 2</a>
+        </li>
+        <li>
+            <a href="#" class="me-4 hover:border-b-2 hover:border-blue-600 md:me-6 active:border-b-2 active:border-blue-600" filterCat="CAT 3">Categoría 3</a>
+        </li>
+    </ul>
+
+    <app-products></app-products>
+</section>
+
+
