--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,11 +8,9 @@ html, body {
     margin: 0;
     width: 100% ;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #272B33;
-    color: white;
   }
   
   body {
-    overflow-x: hidden;
-    padding: 0;
+    overflow-x: hidden !important;
+    padding: 0 !important;
   }
