--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -3,11 +3,11 @@
 <div *ngFor="let product of products" class="flex flex-col items-center justify-center">
 
 <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg hover:shadow-xl hover:scale-105 hover:transition-all transition-all duration-150 hover:duration-150 ">
-    <a href="#">
+    <a [routerLink]="['/product',product.id]" >
         <img class="p-8 rounded-t-lg " src="../../../assets/carousel-1.svg" alt="product image" />
     </a>
     <div class="px-5 pb-5">
-        <a href="#">
+        <a  [routerLink]="['/product',product.id]">
             <h5 class="text-xl font-semibold tracking-tight text-gray-900 ">{{product.prod_name}}</h5>
         </a>
         <div class="flex items-center mt-2.5 mb-5">
