--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,10 +1,10 @@
-<section class="flex">
-    <div class="flex-col sm:w-full md:w-1/2 border-4">
+<section class="grid md:grid-cols-2 sm:grid-cols-1 ">
+    <div class="">
         <figure>
             <img src="../../../assets/carousel-1.svg" alt="">
         </figure>
     </div>
-    <div class="flex-col sm:w-full md:w-1/2 px-11 py-10 border-4">
+    <div class=" px-11 py-10 border-4 ">
         <h1 class="uppercase text-3xl font-bold">{{product.prod_name}}</h1>
         <div class="flex items-center space-x-1 rtl:space-x-reverse pt-6">
             <label class="">99,99 € | </label>
@@ -27,8 +27,8 @@
         <div class="pt-6">
             <p>{{product.prod_description}}</p>
         </div>
-        <div class="flex flex-row pb-0">
-            <h4>Add to cart</h4>
+        <div class="flex flex-row justify-end pb-0">
+            <button class="btn">Add to cart</button>
         </div>
     </div>
     
