--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -18,26 +18,26 @@
     </div>
 <form class="max-w-lg mx-auto">
     <div class="mb-5">
-      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Your email</label>
+      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
       <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
     </div>
     <div class="mb-5">
-      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Your password</label>
+      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Contraseña</label>
       <input type="password" id="password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>
     </div>
     <div class="mb-5">
-      <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 ">Repeat password</label>
+      <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 ">Repita la contraseña</label>
       <input type="password" id="repeat-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>
     </div>
     <div class="grid md:grid-cols-2 md:gap-6">
         <div class="relative z-0 w-full mb-5 group">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Your email</label>
+            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Nombre</label>
             <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
         </div>
         <div class="relative z-0 w-full mb-5 group">
-            <input type="text" name="floating_last_name" id="floating_last_name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
-            <label for="floating_last_name" class="peer-focus:font-medium absolute text-sm   duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Last name</label>
-        </div>
+          <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Apellidos</label>
+          <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
+      </div>
       </div>
     <div class="flex items-start mb-5">
       <div class="flex items-center h-5">
