--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <header>
-  <app-navbar></app-navbar>
+  <app-navbar [ngClass]="mainClass"></app-navbar>
 </header>
-<main class="container mx-auto px-20 mt-20 mb-40">
+<!-- <main [ngClass]="mainClass"> -->
+  <main class="container mx-auto px-20 mt-20 mb-40">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
