--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 
-<section class="container"> 
-<div id="default-carousel" class="relative w-full " data-carousel="slide">
+<section class=""> 
+<div id="default-carousel" class="relative w-full h-full  " data-carousel="slide">
     <!-- Carousel wrapper -->
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
          <!-- Item 1 -->
@@ -52,6 +52,7 @@
 </div>
 </section>
 
+
 <section class="mt-40">
     <h2 class="text-center uppercase text-3xl font-bold">Descubre que le gusta a la gente </h2>
         <app-products [mostViewed]="true"></app-products>
@@ -73,5 +74,6 @@
 
     <app-products></app-products>
 </section>
+
 
 
