added product service

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -39,3 +39,7 @@
 
 </div>
 </section>
+<section>
+    <button class="btn" id="prev-page"> - </button>
+    <button class="btn" id="next-page"> + </button>
+</section>
