--- a/src/app/admin/components/products/list-products/list-products.component.html
+++ b/src/app/admin/components/products/list-products/list-products.component.html
@@ -21,7 +21,7 @@
                     Activo
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    <span class="sr-only">Editar</span>
+                    <span class="">Añadir</span>
                 </th>
             </tr>
         </thead>
