--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -28,7 +28,10 @@
             <p>{{product.prod_description}}</p>
         </div>
         <div class="flex flex-row justify-end pb-0">
-            <button class="btn">Add to cart</button>
+            <button class="btn" (click)="addToCart()">Add to cart</button>
+        </div>
+        <div class="flex flex-row justify-end pb-0">
+            <button class="btn" (click)="removeFromCart()">Remove from cart</button>
         </div>
     </div>
     
