--- a/src/app/admin/components/categories/category-list/category-list.component.html
+++ b/src/app/admin/components/categories/category-list/category-list.component.html
@@ -1,4 +1,5 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+<app-admin-dashboard *ngIf="main_dashboard">
+<div class="overflow-x-auto shadow-md sm:rounded-lg">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
             <tr>
@@ -34,7 +35,7 @@
   </dialog>
 
     
-<div class="flex justify-end pt-12">
+<div *ngIf="!main_dashboard" class="flex justify-end pt-12" >
     <!-- Previous Button -->
     <a id="prev-page" class="flex items-center justify-center px-3 h-8 me-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 ">
       <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -49,3 +50,4 @@
       </svg>
     </a>
   </div>
+</app-admin-dashboard>
