--- a/src/app/admin/components/dashboard-content/dashboard-content.component.html
+++ b/src/app/admin/components/dashboard-content/dashboard-content.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="!component">
+<app-admin-dashboard>
+<div>
     <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-4 mb-4">
         <app-total-earned></app-total-earned>    
         <app-total-earned></app-total-earned>     
@@ -8,15 +9,6 @@
         <app-list-products></app-list-products>
     </div>
 </div>
-<div *ngIf="component == 'productos'">
-    <div class="grid grid-cols-1 mb-4">
-        <app-list-products/>
-    </div>
-</div>
-<div *ngIf="component == 'categorias'">
-    <div class="grid grid-cols-1 mb-4">
-        <app-category-list/>
-    </div>
-</div>
+</app-admin-dashboard>
 
 
