--- a/src/app/admin/components/products/list-products/list-products.component.html
+++ b/src/app/admin/components/products/list-products/list-products.component.html
@@ -1,4 +1,5 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+<app-admin-dashboard *ngIf="main_dashboard">
+<div class="overflow-x-auto shadow-md sm:rounded-lg">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 ">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
             <tr>
@@ -26,10 +27,9 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let prod of productos" class="bg-white border-b  hover:bg-gray-50 ">
+            <tr *ngFor="let prod of productos" class="bg-white border-b hover:bg-gray-50 ">
                 <td class="px-6 py-4">
                     <img src='upload/img/products/{{prod.prod_image}}' alt="{{prod.prod_name}}" srcset="">
-
                  </td>
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
                     {{prod.prod_name}}
@@ -49,43 +49,88 @@
                     <label *ngIf="prod.prod_is_active != 1"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></label>
                 </td>
                 <td class="px-6 py-4 text-right flex gap-2">
-                    <a  class="font-medium  hover:underline" [routerLink]="['productos/',prod.id]"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg></a>
-                    <a  class="font-medium  hover:underline" onclick="my_modal_1.showModal()"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4" /><path d="M13.5 6.5l4 4" /></svg></a>
+                    <a  class="font-medium  hover:underline" [routerLink]="['/ifshop-admin/productos/',prod.id]"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg></a>
+                    <a  class="font-medium  hover:underline" ><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4" /><path d="M13.5 6.5l4 4" /></svg></a>
                 </td>
             </tr>
         </tbody>
     </table>
     
 </div>
-<!-- Open the modal using ID.showModal() method -->
-<dialog id="my_modal_1" class="modal">
-    <div class="modal-box">
-      <span><svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-    </svg></span>
-      <p class="py-4">Press ESC key or click the button below to close</p>
-      <div class="modal-action">
-        <form method="dialog">
-          <!-- if there is a button in form, it will close the modal -->
-          <button class="btn">Close</button>
-        </form>
-      </div>
-    </div>
-  </dialog>
+</app-admin-dashboard>
+<section *ngIf="!main_dashboard">
+<div class="overflow-x-auto shadow-md sm:rounded-lg">
+  <table class="w-full text-sm text-left rtl:text-right text-gray-500 ">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+          <tr>
+              <th scope="col" class="px-6 py-3">
+                  Imagen del producto
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  Nombre del producto
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  Descripción del producto
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  Precio
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  Cantidad
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  Activo
+              </th>
+              <th scope="col" class="px-6 py-3">
+                  <span class="">Añadir</span>
+              </th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let prod of productos" class="bg-white border-b hover:bg-gray-50 ">
+              <td class="px-6 py-4">
+                  <img src='upload/img/products/{{prod.prod_image}}' alt="{{prod.prod_name}}" srcset="">
+               </td>
+              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap ">
+                  {{prod.prod_name}}
+              </th>
+              <td class="px-6 py-4">
+                  {{prod.prod_description | slice:0:10}}...
+              </td>
+              <td class="px-6 py-4">
+                 {{prod.prod_price}}
+              </td>
+              <td class="px-6 py-4">
+                  {{prod.prod_stock_quantity}}
+               </td>
+              
+              <td class="px-6 py-4">
+                  <label *ngIf="prod.prod_is_active == 1"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-check" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg></label>
+                  <label *ngIf="prod.prod_is_active != 1"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg></label>
+              </td>
+              <td class="px-6 py-4 text-right flex gap-2">
+                  <a  class="font-medium  hover:underline" [routerLink]="['/ifshop-admin/productos/',prod.id]"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-eye" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg></a>
+                  <a  class="font-medium  hover:underline"[routerLink]="['/ifshop-admin/productos/edit',prod.id]" ><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-pencil" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 20h4l10.5 -10.5a2.828 2.828 0 1 0 -4 -4l-10.5 10.5v4" /><path d="M13.5 6.5l4 4" /></svg></a>
+              </td>
+          </tr>
+      </tbody>
+  </table>
+  
+</div>
 
-    
 <div class="flex justify-end pt-12">
-    <!-- Previous Button -->
-    <a id="prev-page" class="flex items-center justify-center px-3 h-8 me-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 ">
-      <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
-      </svg>
-      Previous
-    </a>
-    <a id="next-page" class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 ">
-      Next
-      <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-      </svg>
-    </a>
-  </div>
+  <!-- Previous Button -->
+  <a id="prev-page" class="flex items-center justify-center px-3 h-8 me-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 ">
+    <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+    </svg>
+    Previous
+  </a>
+  <a id="next-page" class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 ">
+    Next
+    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+    </svg>
+  </a>
+</div>
+</section>
