--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,16 +19,16 @@
                 <hr>
             </div>
         </section>
-        <form action="" class="pt-10">
+        <form action="" class="pt-10" [formGroup]="myForm" (ngSubmit)="onSubmit()" >
             <div class="pb-5">
             <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
-            <input type="email" id="email" aria-describedby="helper-text-explanation"
+            <input type="email" id="login_email" aria-describedby="helper-text-explanation" formControlName="email"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  "
                 placeholder="name@flowbite.com">
             </div>
             <div class="pb-5 ">
-            <label for="" class="block mb-2 text-sm font-medium text-gray-900 ">Contraseña</label>
-            <input type="password" id="" aria-describedby="helper-text-explanation"
+            <label for="" class="block mb-2 text-sm font-medium text-gray-900 " >Contraseña</label>
+            <input type="password" id="login_password" aria-describedby="helper-text-explanation" formControlName="password"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 "
                 placeholder="******">
             </div>
@@ -44,7 +44,7 @@
                   </div>
             </div>
             <div>
-                <button type="submit" class="btn w-full">Inicia sesión</button>
+                <button type="submit" class="btn w-full" >Inicia sesión</button>
             </div>
         </form>
         <section class="flex items-start mt-6"><p>No tienes una cuenta todavía? <a href="" class="link">Registrate aquí</a></p></section>
