--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -16,10 +16,10 @@
             </div>
         </section>
     </div>
-<form class="max-w-lg mx-auto">
+<form class="max-w-lg mx-auto" [formGroup]="myForm" (ngSubmit)="onSubmit()">
     <div class="mb-5">
       <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Email</label>
-      <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
+      <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required formControlName="email">
     </div>
     <div class="mb-5">
       <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Contraseña</label>
@@ -27,22 +27,27 @@
     </div>
     <div class="mb-5">
       <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 ">Repita la contraseña</label>
-      <input type="password" id="repeat-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>
+      <input type="password" id="repeat-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " formControlName="password" required>
     </div>
     <div class="grid md:grid-cols-2 md:gap-6">
         <div class="relative z-0 w-full mb-5 group">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Nombre</label>
-            <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
+            <label for="name" class="block mb-2 text-sm font-medium text-gray-900 ">Nombre</label>
+            <input type="name" id="name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " formControlName="name" required>
         </div>
         <div class="relative z-0 w-full mb-5 group">
-          <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Apellidos</label>
-          <input type="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " placeholder="name@flowbite.com" required>
+          <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 ">Apellidos</label>
+          <input type="last_name" id="last_name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " formControlName="last_name" required>
       </div>
+      </div>
+      <div class="mb-5">
+        <label for="user_name" class="block mb-2 text-sm font-medium text-gray-900 ">Nombre de usuario</label>
+        <input type="user_name" id="user_name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " formControlName="user_name" required>
       </div>
     <div class="flex items-start mb-5">
       <div class="flex items-center h-5">
         <input id="terms" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 " required>
       </div>
+      
       <label for="terms" class="ms-2 text-sm font-medium text-gray-900 ">I agree with the <a href="#" class="text-blue-600 hover:underline ">terms and conditions</a></label>
     </div>
     <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center ">Register new account</button>
