--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -42,7 +42,7 @@
         <app-review-stadistics></app-review-stadistics>
     </section>
     <section class="pt-14">
-        <app-add-reviews></app-add-reviews>
+        <app-add-reviews [product_id]="product.id"></app-add-reviews>
     </section>
     <section class="pt-14">
         <app-reviews></app-reviews>
